<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_location"
        android:icon="@drawable/ic_location_on_24dp"
        android:title="@string/navigation_drawer_location"
        app:actionLayout="@layout/switch_layout" />

    <item
        android:id="@+id/nav_calendar"
        android:icon="@drawable/ic_calendar_24dp"
        android:title="@string/navigation_drawer_appointments" />

    <item
        android:id="@+id/nav_friendList"
        android:icon="@drawable/ic_friends_24dp"
        android:title="@string/navigation_drawer_friendList" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/navigation_drawer_settings" />



</menu>
